--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -136,21 +136,21 @@
         <div class='userImage' hidden?='{{model.onlineNetwork.imageData==null}}'
           style='background-image: url({{model.onlineNetwork.imageData}});'
           ></div>
-        <div class='networkName'>Connected with {{model.onlineNetwork.name}}</div>
+        <div class='networkName'>{{ 'connectedWith' | $$({network: model.onlineNetwork.name}) }}</div>
         <!-- show userName and userId if both are available -->
         <div hidden?='{{!model.onlineNetwork.userName}}'>
-          <div class='userInfoName'>{{model.onlineNetwork.userName}}</div>
-          <div class='userInfoID'>{{model.onlineNetwork.userId}}</div>
+          <div class='userInfoName' dir='auto'>{{model.onlineNetwork.userName}}</div>
+          <div class='userInfoID' dir='auto'>{{model.onlineNetwork.userId}}</div>
         </div>
         <!-- otherwise show only userId -->
         <div hidden?='{{model.onlineNetwork.userName}}'>
-          <div class='userInfoIDWithoutName'>{{model.onlineNetwork.userId}}</div>
+          <div class='userInfoIDWithoutName' dir='auto'>{{model.onlineNetwork.userId}}</div>
         </div>
       </div>
 
       <div id='settingsLinks'>
         <div id='descriptionWrapper'>
-          Device description
+          {{ 'deviceDescription' | $$ }}
           <uproxy-description></uproxy-description>
         </div>
 
@@ -158,17 +158,17 @@
 
         <uproxy-link on-tap='{{ openFeedbackForm }}' role='button'>
           <core-icon icon="announcement"></core-icon>
-          <span class='label'>Submit Feedback</span>
+          <span class='label'>{{ 'submitFeedback' | $$ }}</span>
         </uproxy-link>
 
         <uproxy-faq-link>
           <core-icon icon="help"></core-icon>
-          <span class='label'>Get Help</span>
+          <span class='label'>{{ 'getHelp' | $$ }}</span>
         </uproxy-faq-link>
 
         <uproxy-link on-tap='{{ toggleAdvancedSettings }}' role='button'>
           <core-icon icon="settings"></core-icon>
-          <span class='label'>Advanced Settings</span>
+          <span class='label'>{{ 'advancedSettings' | $$ }}</span>
         </uproxy-link>
         <div id='advancedSettings' hidden?='{{!displayAdvancedSettings}}'>
           <paper-input-decorator label="Custom STUN server">
@@ -180,7 +180,7 @@
           <p id='confirmResetServers' class='advancedSettingsText' hidden>STUN servers reset. Default servers will be used for future connections.</p>
         </div>
         <div id='metricsCheckbox'>
-          <paper-checkbox checked='{{ model.globalSettings.statsReportingEnabled }}' label='Anonymous stats enabled'></paper-checkbox>
+          <paper-checkbox checked='{{ model.globalSettings.statsReportingEnabled }}' label='{{ "statsEnabledTitle" | $$ }}'></paper-checkbox>
           <uproxy-faq-link anchor='doesUproxyLogData'>
             <core-icon icon="help"></core-icon>
           </uproxy-faq-link>
@@ -190,12 +190,12 @@
 
         <uproxy-link on-tap='{{ restart }}' hidden?='{{ ui.browser !== "chrome" }}' role='button'>
           <core-icon icon="refresh"></core-icon>
-          Restart
+          {{ 'restart' | $$ }}
         </uproxy-link>
 
         <uproxy-link on-tap='{{ logOut }}' role='button'>
           <core-icon icon="uproxy-icons:logout"></core-icon>
-          Log-out of uProxy
+          {{ 'logout' | $$ }}
         </uproxy-link>
       </div>
     </div>
