--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -75,12 +75,12 @@
     <div id='loadContacts' hidden?='{{ model.onlineNetwork.hasContacts }}'>
       <core-icon icon="social:person" class="no-friends"></core-icon>
       <div id='loadingContacts' hidden?='{{ !loadingContacts }}'>
-        Loading uProxy friends<br>
+        {{ 'loadingFriends' | $$ }}<br>
         <paper-progress indeterminate='true'></paper-progress>
       </div>
       <div id='noContactsFound' hidden?='{{ loadingContacts }}'>
-        None of your friends on {{ model.onlineNetwork.name }} are signed into uProxy at this time.
-        <p id='inviteFriends'>To invite friends to uProxy, send them a link to <a href="https://www.uproxy.org" target="_blank">www.uproxy.org</a></p>
+        {{ 'noFriendsOnline' | $$({network: model.onlineNetwork.name}) }}
+        <p id='inviteFriends'>{{ 'toInviteFriends' | $$ }}</p>
       </div>
     </div>
 
@@ -90,7 +90,7 @@
 
       <!-- uProxy contacts offering access to or requesting access from user -->
       <uproxy-roster-group
-          groupTitle='{{model.globalSettings.mode==ui_constants.Mode.GET ? "Offers" : "Requests"}}'
+          groupTitle='{{ (model.globalSettings.mode==ui_constants.Mode.GET ? "offers" : "requests") | $$ }}'
           onlineContacts='{{ contacts.onlinePending }}'
           offlineContacts='{{ contacts.offlinePending }}'
           searchQuery='{{ searchQuery }}'
@@ -102,7 +102,7 @@
 
       <!-- trusted uProxy contacts -->
       <uproxy-roster-group
-          groupTitle='{{model.globalSettings.mode==ui_constants.Mode.GET ? "Friends you can get access from" : "Friends who can get access from you"}}'
+          groupTitle='{{ (model.globalSettings.mode==ui_constants.Mode.GET ? "friendsWhoShare" : "friendsWhoCanGet") | $$ }}'
           onlineContacts='{{ contacts.onlineTrustedUproxy }}'
           offlineContacts='{{ contacts.offlineTrustedUproxy }}'
           searchQuery='{{ searchQuery }}'></uproxy-roster-group>
@@ -113,7 +113,7 @@
 
       <!-- untrusted uProxy contacts -->
       <uproxy-roster-group
-          groupTitle='Friends who have uProxy'
+          groupTitle='{{ "uproxyFriends" | $$ }}'
           onlineContacts='{{ contacts.onlineUntrustedUproxy }}'
           offlineContacts='{{ contacts.offlineUntrustedUproxy }}'
           searchQuery='{{ searchQuery }}'></uproxy-roster-group>
