Show an error when the browser is unable to proxy
If the browser API indicates to the user that we are unable to proxy, we
will now show an error.  If the user is already proxying when this
happens, we will cut off the connection and show them a much more
prominent error.

This also (again) simplifies the logic of calculating the current height
of the statuses.

This also fixes the firing of core signals.

Fixes #1533

--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -44,7 +44,7 @@
 
       <!-- not getting or trying to get access -->
       <div hidden?='{{ instance.localGettingFromRemote != GettingState.NONE }}'>
-        <paper-button raised on-tap='{{ start }}'>
+        <paper-button raised on-tap='{{ start }}' disabled?='{{ !ui.browserApi.canProxy }}'>
           Start getting access
         </paper-button>
       </div>
