--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -20,6 +20,7 @@
 <link rel='import' href='dialog.html'>
 <link rel='import' href='browser-elements.html'>
 <link rel='import' href='icons.html'>
+<link rel='import' href='proxy-error.html'>
 
 <polymer-element name='uproxy-root' attributes='model' on-update-view='{{ updateView }}' on-open-dialog='{{ openDialog }}'>
 
@@ -134,14 +135,22 @@
         padding-left: 20px;
         padding-right: 20px;
         padding-top: 19px;
-        text-overflow: ellipsis;
         white-space: nowrap;
-        overflow: hidden;
         font-size: 14px;
+      }
+      .statusText, .statusText [flex] {
+        /* cut off the statusText itself, or any contained flex-grow element */
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
       .statusRow core-icon {
         padding-right: 20px;
+      }
+      .statusRow a, .statusRow core-icon {
         color: #0EC5AF;
+      }
+      .statusRow.error core-icon {
+        color: #DD2D2D;
       }
       uproxy-bubble {
         z-index: 1;
@@ -301,6 +310,15 @@
             </div>
 
             <div id='status'>
+              <div class='statusRow error' hidden?='{{ ui.browserApi.canProxy }}'>
+                <div class='statusText' horizontal layout>
+                  <core-icon icon='warning'></core-icon>
+                  <span flex>
+                    Other proxy settings in use
+                  </span>
+                  <a href='#' on-tap='{{ openProxyError }}'>GET HELP</a>
+                </div>
+              </div>
               <div class='statusRow' hidden?='{{!ui.gettingStatus}}'>
                 <div class='statusText'>
                   <core-icon icon='uproxy-icons:receive'></core-icon>
@@ -358,9 +376,11 @@
 
     <uproxy-troubleshoot titleText='{{ troubleshootTitle }}'></uproxy-troubleshoot>
 
+    <uproxy-proxy-error id='proxyError'></uproxy-proxy-error>
+
     <paper-toast id='toast'
         text='{{ toastMessage }}' responsiveWidth='320px'
-        style='bottom: {{ topOfStatuses([ui.gettingStatus, ui.sharingStatus], ui.view == ui_constants.View.ROSTER && !$.feedback.opened && !$.advancedSettings.opened) }}px;'
++        style='bottom: {{ topOfStatuses($.status.offsetHeight, ui.view == ui_constants.View.ROSTER && !$.feedback.opened) }}px;'
         duration='10000'>
       <div id='toastHelpLink' on-tap="{{ openTroubleshoot }}"
           hidden?='{{ !stringMatches(toastMessage, user_interface.GET_FAILED_MSG) && !stringMatches(toastMessage, user_interface.SHARE_FAILED_MSG) }}'>GET HELP
