--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -1,5 +1,9 @@
 <link rel='import' href='../../bower/polymer/polymer.html'>
 <link rel='import' href='../../bower/paper-button/paper-button.html'>
+<link rel='import' href='../../bower/paper-item/paper-item.html'>
+<link rel="import" href="../../bower/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../../bower/paper-dropdown/paper-dropdown.html">
+<link rel="import" href="../../bower/core-menu/core-menu.html">
 <link rel='import' href='faq-link.html'>
 <link rel='import' href='network.html'>
 
@@ -93,6 +97,13 @@
     #intro1, #networks {
       height: 100%;
     }
+    #languageLink core-icon {
+      height: 20px;
+      width: 20px;
+    }
+    paper-item::shadow .button-content {
+      padding: 0;
+    }
     </style>
 
     <core-icon icon='arrow-back' on-tap='{{prev}}' class='prevArrow'
@@ -108,6 +119,17 @@
 
         <div id='nextWrapper'>
           <paper-button raised on-tap='{{next}}'>{{ 'next' | $$ }}</paper-button>
+        </div>
+        <div id='languageLink'>
+          <core-icon icon='language'></core-icon>
+          <paper-dropdown-menu label="{{ 'language' | $$ }}">
+            <paper-dropdown class="dropdown">
+                <core-menu class="menu" on-core-select='{{ updateLanguage }}'>
+                    <paper-item languageCode='en-US'>{{ 'english' | $$ }}</paper-item>
+                    <paper-item languageCode='ar'>{{ 'farsi' | $$ }}</paper-item>
+                </core-menu>
+            </paper-dropdown>
+          </paper-dropdown-menu>
         </div>
       </div>
 
