Remove unnecessary Polymer observer.

--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -138,7 +138,7 @@
           <div class='userInfoID' dir='auto'>{{model.onlineNetwork.userId}}</div>
         </div>
         <!-- otherwise show only userId -->
-        <div hidden?='{{model.onlineNetwork.userName}}'>
+        <div hidden?='{{model.onlineNetwork.userName}}' horizontal layout>
           <div class='userInfoIDWithoutName' dir='auto'>{{model.onlineNetwork.userId}}</div>
         </div>
       </div>
