Translate app-missing. Refresh appropriately after getting language from storage.

--- a/src/chrome/app/polymer/ext-missing.html
+++ b/src/chrome/app/polymer/ext-missing.html
@@ -19,6 +19,7 @@
       }
     </style>
 
+    <!-- TODO: Translate this. -->
     <h1>You're almost ready to use uProxy!</h1>
     Download and enable part 1 of uProxy to get started.
     <br><br>
