--- a/src/chrome/extension/polymer/app-missing.html
+++ b/src/chrome/extension/polymer/app-missing.html
@@ -19,8 +19,8 @@
       }
     </style>
     <div>
-      <h1>You're almost ready to use uProxy!</h1>
-      <div>Download and enable part 2 of uProxy to get started.</div><br>
+      <h1>{{ 'appMissingTitle' | $$ }}</h1>
+      <div>{{ 'appMissingText' | $$ }}</div><br>
       <paper-button class='highlightedButton' raised on-tap='{{ downloadApp }}'>NEXT</paper-button>
     </div>
 
