--- a/src/chrome/app/install-incomplete.html
+++ b/src/chrome/app/install-incomplete.html
@@ -24,7 +24,8 @@ ext-missing Polymer element. -->
 </head>
 
 <body>
-  <uproxy-ext-missing></uproxy-ext-missing>
+  <!-- TODO: Remove dir attribute once the ext-missing element is translated. -->
+  <uproxy-ext-missing dir='ltr'></uproxy-ext-missing>
 </body>
 
 </html>
