--- a/src/chrome/extension/polymer/app-missing.html
+++ b/src/chrome/extension/polymer/app-missing.html
@@ -21,7 +21,7 @@
     </style>
     <div>
       <h1>{{ 'appMissingTitle' | $$ }}</h1>
-      <div>{{ 'appMissingText' | $$ }}</div><br>
+      <div>{{ 'appMissingMessage' | $$ }}</div><br>
       <paper-button class='highlightedButton' raised on-tap='{{ downloadApp }}'>{{ 'next' | $$ }}</paper-button>
     </div>
 
