Add the ability to the UI to manage multiple accounts
This sets up the ability within the UI to handle multiple accounts.
Primarily, this changes the concept of having a single online network to
storing an array of online networks.  As we get information about
networks, we will add them to this array.  The handling of all update
commands will now lookup the appropriate network to execute the command
under.

There is some minor code cleanup within this as well that switches
setting icons so that it will now be done in a single function.  This
function will check for all conditions that require their own icon and
will set the appropriate icon from that.

In order to make this easier to work with, the model is now a class that
exposes basic functionality such as looking up a network and a user
within a network.

This also updates the tests for UI scripts and attempts to add more unit
functionality to them as well as to remove code duplication.

At this point, no work has been done on the UI, so everything will look
horribly ugly.

--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -67,19 +67,19 @@
     <core-signals on-core-signal-login-success="{{ loadContacts }}"></core-signals>
 
     <!-- Shown if there are no contacts found so far -->
-    <div id='loadContacts' hidden?='{{ model.onlineNetwork.hasContacts }}'>
+    <div id='loadContacts' hidden?='{{ hasContacts }}'>
       <core-icon icon="social:person" class="no-friends"></core-icon>
       <div id='loadingContacts' hidden?='{{ !loadingContacts }}'>
         Loading uProxy friends<br>
         <paper-progress indeterminate='true'></paper-progress>
       </div>
       <div id='noContactsFound' hidden?='{{ loadingContacts }}'>
-        None of your friends on {{ model.onlineNetwork.name }} are signed into uProxy at this time.
+        None of your friends are signed into uProxy at this time.
         <p id='inviteFriends'>To invite friends to uProxy, send them a link to <a href="https://www.uproxy.org" target="_blank">www.uproxy.org</a></p>
       </div>
     </div>
 
-    <div hidden?='{{ !model.onlineNetwork.hasContacts }}'>
+    <div hidden?='{{ !hasContacts }}'>
       <!-- Intentionally hiding search box. May decide to readd it later. -->
       <input type='text' id='search' placeholder='Search' value='{{ searchQuery }}' hidden></input>
 
