This adds the actual UI components to support multiple networks
Under settings, we now have a panel that lists all the networks we could
sign in through and offers the user to connect or disconnect to each of
these networks.

This does not yet add the small thingamabobbers next to the profile
image denoting which network is signed in.

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -220,7 +220,7 @@
         hidden?='{{ ui.view !== ui_constants.View.ROSTER }}'>
       <core-header-panel drawer>
         <div class='content' fit>
-          <uproxy-settings id='settings'></uproxy-settings>
+          <uproxy-settings id='settings' fit></uproxy-settings>
         </div>
       </core-header-panel>
       <core-header-panel main
