--- a/src/generic_ui/polymer/copypaste.html
+++ b/src/generic_ui/polymer/copypaste.html
@@ -37,10 +37,10 @@
     <core-signals on-core-signal-copypaste-back='{{ exitMode }}'></core-signals>
     <core-signals on-core-signal-copypaste-init='{{ init }}'></core-signals>
 
-    <uproxy-app-bar disableback='{{ ui.copyPasteGettingState === GettingState.GETTING_ACCESS || ui.copyPasteSharingState === SharingState.SHARING_ACCESS }}' on-go-back='{{ handleBackClick }}'>
-      <span hidden?='{{ SharingState.NONE === ui.copyPasteSharingState }}'>Share a </span>
-      <span hidden?='{{ SharingState.NONE !== ui.copyPasteSharingState || GettingState.NONE === ui.copyPasteGettingState }}'>Request a </span>
-      <span hidden?='{{ SharingState.NONE !== ui.copyPasteSharingState || !(SharingState.NONE !== ui.copyPasteSharingState || GettingState.NONE === ui.copyPasteGettingState) }}'>Start a </span>
+    <uproxy-app-bar disableback='{{ ui.copyPasteState.localGettingFromRemote === GettingState.GETTING_ACCESS || ui.copyPasteState.localSharingFromRemote === SharingState.SHARING_ACCESS }}' on-go-back='{{ handleBackClick }}'>
+      <span hidden?='{{ SharingState.NONE === ui.copyPasteState.localSharingFromRemote }}'>Share a </span>
+      <span hidden?='{{ SharingState.NONE !== ui.copyPasteState.localSharingFromRemote || GettingState.NONE === ui.copyPasteState.localGettingFromRemote }}'>Request a </span>
+      <span hidden?='{{ SharingState.NONE !== ui.copyPasteState.localSharingFromRemote || !(SharingState.NONE !== ui.copyPasteSharingState || GettingState.NONE === ui.copyPasteState.localGettingFromRemote) }}'>Start a </span>
       <span>one-time connection</span>
     </uproxy-app-bar>
 
@@ -49,7 +49,7 @@
       navigating to the link again or asking your friend for a new link.
     </uproxy-bubble>
 
-    <div id='nothing' hidden?='{{ ui.copyPasteGettingState !== GettingState.NONE || ui.copyPasteSharingState !== SharingState.NONE }}'>
+    <div id='nothing' hidden?='{{ ui.copyPasteState.localGettingFromRemote !== GettingState.NONE || ui.copyPasteState.localSharingFromRemote !== SharingState.NONE }}'>
       <p>
         You are no longer getting access.  To request a connection, click the
         button below.
@@ -67,8 +67,8 @@
       <p>To share your connection, please ask your friend to send you their link.</p>
     </div>
 
-    <div id='getting' hidden?='{{ ui.copyPasteGettingState === GettingState.NONE || ui.copyPasteSharingState !== SharingState.NONE }}'>
-      <div class='link' hidden?='{{ ui.copyPasteGettingState !== GettingState.TRYING_TO_GET_ACCESS }}'>
+    <div id='getting' hidden?='{{ ui.copyPasteState.localGettingFromRemote === GettingState.NONE || ui.copyPasteState.localSharingFromRemote !== SharingState.NONE }}'>
+      <div class='link' hidden?='{{ ui.copyPasteState.localGettingFromRemote !== GettingState.TRYING_TO_GET_ACCESS }}'>
         <p>
           To request access from a friend, copy and paste this URL to them over
           a secure channel
@@ -86,7 +86,7 @@
         </p>
       </div>
 
-      <div class='connected' hidden?='{{ ui.copyPasteGettingState !== GettingState.GETTING_ACCESS }}'>
+      <div class='connected' hidden?='{{ ui.copyPasteState.localGettingFromRemote !== GettingState.GETTING_ACCESS }}'>
         <p>Success!  A one-time connection has been established.</p>
 
         <p>
@@ -116,8 +116,8 @@
       </div>
     </div>
 
-    <div id='sharing' hidden?='{{ ui.copyPasteSharingState === SharingState.NONE }}'>
-      <div class='link' hidden?='{{ ui.copyPasteSharingState !== SharingState.TRYING_TO_SHARE_ACCESS }}'>
+    <div id='sharing' hidden?='{{ ui.copyPasteState.localSharingFromRemote === SharingState.NONE }}'>
+      <div class='link' hidden?='{{ ui.copyPasteState.localSharingFromRemote !== SharingState.TRYING_TO_SHARE_ACCESS }}'>
         <p>Your friend has requested to use your internet connection.</p>
 
         <p>
@@ -149,7 +149,7 @@
 
       </div>
 
-      <div class='connected' hidden?='{{ ui.copyPasteSharingState !== SharingState.SHARING_ACCESS }}'>
+      <div class='connected' hidden?='{{ ui.copyPasteState.localSharingFromRemote !== SharingState.SHARING_ACCESS }}'>
         <p>Success!  A one-time connection has been established.</p>
 
         <paper-button raised class='grey' on-tap='{{ stopSharing }}'>Stop sharing access</paper-button>
